Fix for bug 430392 (Pressing enter in div w/ contenteditable = true causes text nodes to move unexpectedly) . r/sr=jst, a=damon.